--- a/static/style.css
+++ b/static/style.css
@@ -27,17 +27,27 @@ body {
   align-items: center;
   padding: 0 1rem;
   background: var(--primary-color);
-  color: white;
+  color: var(--background);
   height: var(--navbar-height);
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.4);
   position: relative;
   z-index: 2;
 }
 
+/* Logo */
+.logo {
+  max-width: var(--navbar-height);
+  max-height: var(--navbar-height);
+  padding: 0 0.5rem;
+  margin: 0px 5px;
+  display: flex;
+  align-items: center;
+}
+
 /* Brand Name */
 .brand h1 {
   color: var(--secondary-color);
-  font-size: 1.5rem;
+  font-size: 2rem;
   margin-left: 10px;
 }
 
@@ -45,7 +55,7 @@ body {
 .center-nav {
   display: flex;
   align-items: center;
-  gap: 1rem;
+  gap: 3rem;
 }
 
 .navitem {
