--- a/static/style.css
+++ b/static/style.css
@@ -106,7 +106,7 @@ body {
 }
 
 .navsearch.active .searchbox {
-  width: calc(50vw);
+  width: var(--searchbox-width);
   max-width: 600px;
   opacity: 1;
 }
