--- a/static/style.css
+++ b/static/style.css
@@ -177,8 +177,7 @@ body {
   left: calc(-1 * var(--sidebar-width));
   width: var(--sidebar-width);
   height: var(--sidebar-height);
-  background-color: var(--primary-color);
-  opacity: 0.7;
+  background-color: rgba(116, 13, 173, 0.7);
   flex-direction: column;
   padding: 1rem;
   box-shadow: 2px 0px 10px rgba(0, 0, 0, 0.5);
