updated app for some changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,9 +3,7 @@
 {% block title %}Resonix - Music Streaming Application{% endblock %}
 
 {% block content %}
-<h1 style="text-align: center;align-items: center;margin-top: 20%;"> Welcome to Music Application</h1>    
-        <div class="button">
-            <a id="button1" href="{{ url_for('index') }}">Login</a>
-            <a id="button2" href="{{ url_for('index') }}">Register</a>
-        </div>
+<section class="home">
+
+</section>
 {% endblock %}
