--- a/static/style.css
+++ b/static/style.css
@@ -4,7 +4,7 @@
     --secondary-color: #FF007A;
     --highlight-color: #FFFF00;
     --navbar-height: 7vh;
-    --sidebar-width: calc(20vw);
+    --sidebar-width: calc(30vw);
     --sidebar-height: calc(80vh);
     --logo-size: calc(0.8 * var(--navbar-height));
     --nav-item-size: calc(1.5rem + 1vw);
@@ -214,93 +214,30 @@ body {
   color: var(--highlight-color);
 }
 
-.profile-section {
-  display: flex;
-  flex-direction: column;
+
+
+.profile {
+  text-align: center;
   margin-bottom: 2rem;
-  align-items: center;
-  text-align: center;
 }
 
-.profile-pic {
-  width: calc(0.5*var(--sidebar-width));
-  height: calc(0.5*var(--sidebar-width));
-  border-radius: calc(0.5*var(--sidebar-width));
-  margin-bottom: 1rem;
-  object-fit: cover;
+.profile img {
+  width: calc(0.5 * var(--sidebar-width));
+  height: calc(0.5 * var(--sidebar-width));
+  border-radius: calc(0.5 * var(--sidebar-width));
+  margin-bottom: 10px;
 }
 
-.username {
-  font-size: 1.2rem;
+.profile h2 {
   color: var(--highlight-color);
 }
 
-/* Dropdown Styling */
-.menu-links ul {
-  list-style: none;
-  padding: 0;
-}
-
-.menu-links li {
-  margin: 0.5rem 0;
-}
-
-.dropdown-btn {
-  background-color: transparent;
-  border: none;
-  color: white;
-  font-size: 1.2rem;
-  text-align: left;
-  width: 100%;
-  cursor: pointer;
-  padding: 0.5rem;
-  transition: background-color 0.3s ease;
-}
-.dropdown-btn:hover {
-  background-color: rgba(255, 255, 255, 0.1);
-}
-
-.dropdown-content {
-  display: none;
-  list-style: none;
-  padding-left: 1rem;
-}
-
-.dropdown-content li {
-  margin: 0.5rem 0;
-}
-
-.dropdown-content a {
-  text-decoration: none;
-  color: white;
-  font-size: 1rem;
-  transition: color 0.3s ease;
-}
-
-.dropdown-content a:hover {
-  color: var(--highlight-color);
-}
-
-/* Toggle Dropdown on Active */
-.dropdown-btn.active + .dropdown-content {
-  display: block;
-}
-
-/* Footer Styling */
-.menu-footer {
-  margin-top: auto;
-  text-align: center;
+.footer {
+  margin-top: 2rem;
   font-size: 0.8rem;
+  text-align: center;
   color: var(--secondary-color);
 }
-
-.menu-footer a {
-  color: var(--highlight-color);
-  text-decoration: none;
-}
-
-
-
 
 
 /**********************************************************************************************************************/
