--- a/static/style.css
+++ b/static/style.css
@@ -9,6 +9,7 @@
     --logo-size: calc(0.8 * var(--navbar-height));
     --nav-item-size: calc(1.5rem + 1vw);
     --searchbox-width: calc(30vw);
+    --transition-speed: 0.3s;
 }
 
 /* General Styles */
@@ -21,6 +22,7 @@
 body {
   font-family: 'Poppins', sans-serif;
   background-color: var(--background);
+  scroll-behavior: smooth;
 }
 
 /*********************************************************** NAV - BAR ***********************************************************/
@@ -76,12 +78,12 @@ body {
 
 .navitem ion-icon {
   font-size: 2rem;
-  transition: font-size 0.3s ease;
+  transition: font-size var(--transition-speed) ease;
 }
 
 .navsearch ion-icon {
   font-size: 2rem;
-  transition: font-size 0.3s ease;
+  transition: font-size var(--transition-speed) ease;
 }
 
 .navitem.active ion-icon {
@@ -97,7 +99,7 @@ body {
 .searchbox {
   width: 0;
   opacity: 0;
-  transition: all 0.4s ease-in-out;
+  transition: all var(--transition-speed) ease-in-out;
   padding: 0.5rem 1rem;
   font-size: 1rem;
   border-radius: 20px;
@@ -146,7 +148,7 @@ body {
   width: 25px;
   background-color: var(--secondary-color);
   border-radius: 5px;
-  transition: all 0.4s ease-in-out;
+  transition: all var(--transition-speed) ease-in-out;
 }
 
 .hamburger.active .line:nth-child(1) {
@@ -182,7 +184,7 @@ body {
   padding: 1rem;
   overflow-y: auto;
   box-shadow: 2px 0px 10px rgba(0, 0, 0, 0.5);
-  transition: all 0.4s ease-in-out;
+  transition: all var(--transition-speed) ease-in-out;
   z-index: 1;
 }
 
@@ -203,7 +205,7 @@ body {
   color: var(--secondary-color);
   text-decoration: none;
   font-size: 1.2rem;
-  transition: color 0.3s;
+  transition: all var(--transition-speed) ease;
 }
 
 .side-menu ul li a:hover {
@@ -233,11 +235,73 @@ body {
 }
 
 .footer {
-  margin-top: 2rem;
-  font-size: 0.8rem;
+  margin-top: 1rem;
+  font-size: 1.2rem;
   text-align: center;
-  color: var(--secondary-color);
+  color: var(--highlight-color);
+}
+.footer:hover {
+  text-shadow: 
+  0 0 5px var(--secondary-color),
+  0 0 10px var(--secondary-color),
+  0 0 15px var(--secondary-color),
+  0 0 20px var(--secondary-color),
+  0 0 25px var(--secondary-color),
+  0 0 30px var(--secondary-color),
+  0 0 35px var(--secondary-color),
+  0 0 40px var(--secondary-color),
+  0 0 45px var(--secondary-color),
+  0 0 50px var(--secondary-color);
 }
 
+/* Accordion Container */
+.accordion {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 1rem;
+  background: transparent;
+}
 
+/* Accordion Items */
+.accordion-item {
+  overflow: hidden;
+}
+
+.accordion-item input {
+  display: none;
+}
+
+/* Label Styling */
+.accordion-item label {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0;
+  padding: 0.5rem;
+  height: auto;
+  width: auto;
+  font-size: clamp(1rem, 5vw, 1.5rem);
+  color: var(--highlight-color);
+  background: var(--primary-color);
+  transition: all var(--transition-speed);
+}
+
+.accordion-item label:hover {
+  background: var(--secondary-color);
+}
+
+.accordion-item label .icon {
+  font-size: 2rem;
+  transition: transform var(--transition-speed);
+}
+
+/* Toggle Behavior */
+.accordion-item input:checked + label + ul {
+  max-height: 100vh;
+}
+
+.accordion-item input:checked + label .icon {
+  transform: rotate(45deg);
+}
 /**********************************************************************************************************************/
